[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_scpi"
dist-name = "yaqd-scpi"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["yaqd-core>=2020.10.0", "PyVISA", "PyVISA-py"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaqd-scpi"
Issues = "https://gitlab.com/yaq/yaqd-scpi/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-scpi-sensor = "yaqd_scpi._scpi_sensor:SCPISensor.main"
yaqd-scpi-set-continuous = "yaqd_scpi._scpi_set_continuous:SCPISetContinuous.main"
yaqd-scpi-set-discrete = "yaqd_scpi._scpi_set_discrete:SCPISetDiscrete.main"


[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
